new changes to seller dashboard and homepage

--- a/seller/templates/dashboard.html
+++ b/seller/templates/dashboard.html
@@ -75,7 +75,8 @@
               </div>
             </div>
           </div>
-          <div class="row">
+
+          {% comment %} <div class="row">
             <div class="col-md-6 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
@@ -116,8 +117,10 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row">
+          </div> {% endcomment %}
+
+
+          {% comment %} <div class="row">
             <div class="col-md-12 grid-margin stretch-card">
               <div class="card position-relative">
                 <div class="card-body">
@@ -296,9 +299,11 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> {% endcomment %}
+
+
           <div class="row">
-            <div class="col-md-7 grid-margin stretch-card">
+            <div class="col-md-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
                   <p class="card-title mb-0">Top Products</p>
@@ -361,7 +366,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-5 grid-margin stretch-card">
+            
+            {% comment %} <div class="col-md-5 grid-margin stretch-card">
 							<div class="card">
 								<div class="card-body">
 									<h4 class="card-title">To Do Lists</h4>
@@ -421,8 +427,10 @@
 								</div>
 							</div>
             </div>
-          </div>
-          <div class="row">
+          </div> {% endcomment %}
+
+
+          {% comment %} <div class="row">
             <div class="col-md-4 stretch-card grid-margin">
               <div class="card">
                 <div class="card-body">
@@ -601,38 +609,9 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12 grid-margin stretch-card">
-              <div class="card">
-                <div class="card-body">
-                  <p class="card-title">Advanced Table</p>
-                  <div class="row">
-                    <div class="col-12">
-                      <div class="table-responsive">
-                        <table id="example" class="display expandable-table" style="width:100%">
-                          <thead>
-                            <tr>
-                              <th>Quote#</th>
-                              <th>Product</th>
-                              <th>Business type</th>
-                              <th>Policy holder</th>
-                              <th>Premium</th>
-                              <th>Status</th>
-                              <th>Updated at</th>
-                              <th></th>
-                            </tr>
-                          </thead>
-                      </table>
-                      </div>
-                    </div>
-                  </div>
-                  </div>
-                </div>
+          </div> {% endcomment %}
 
-                
-              </div>
-            </div>
-        </div>
+
+
 
         {% endblock %}
