--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -42,8 +42,8 @@
                         class="header-src"><i class="fas fa-search"></i></button>
                 </div><a href="index.html" class="header-logo "><img src="{% static 'main/images/logo1.png' %}"
                         alt="logo"></a>
-                {% if user.is_authenticated %}
-                <a href="login.html" class="header-widget" title="My Account">
+                {% if buyer %}
+                <a href="#" class="header-widget" title="My Account">
                     <img src="{% static 'main/images/user.png' %}" alt="user"><span>{{request.user.username}}</span></a>
                 <form class="header-form"><input type="text" placeholder="Search anything..."><button><i
                             class="fas fa-search"></i></button></form>
@@ -54,23 +54,20 @@
                             class="fas fa-shopping-basket"></i><sup>9+</sup><span>total
                             price<small>&#x20B5; 50.00</small></span></button>
                 </div>
-                {% else %}
-                    {% comment %} <p> <a href="/login"><button type="button" class="btn-sm btn-outline-success"> login</button></a></p>
-                <a href="/register"><button type="button" class="btn-sm btn-outline-success"> get
-                        registered</button></a></p>  {% endcomment %}
+                {% endif %}
+                
+                {% if seller %}
+                <a href="{% url 'login' %}" class="header-widget" title="My Account">
+                    <img src="{% static 'main/images/user.png' %}" alt="user"><span>{{request.user.username}}</span></a>
+                <form class="header-form"><input type="text" placeholder="Search anything..."><button><i
+                            class="fas fa-search"></i></button></form>
+                {% endif %}
 
-                <a href="/login" class="header-widget" title="My Account">
+                {% if none %}
+                <a href="{% url 'login' %}" class="header-widget" title="My Account">
                     <img src="{% static 'main/images/user.png' %}" alt="user"><span>Login</span></a>
                 <form class="header-form"><input type="text" placeholder="Search anything..."><button><i
                             class="fas fa-search"></i></button></form>
-                {% comment %} <div class="header-widget-group"><a href="compare.html" class="header-widget" title="Compare List"><i
-                            class="fas fa-random"></i><sup>0</sup></a><a href="wishlist.html" class="header-widget"
-                        title="Wishlist"><i class="fas fa-heart"></i><sup>0</sup></a><button
-                        class="header-widget header-cart" title="Cartlist"><i
-                            class="fas fa-shopping-basket"></i><sup>9+</sup><span>total
-                            price<small>&#x20B5; 50.00</small></span></button>
-                </div> {% endcomment %}
-
                 {% endif %}
             </div>
         </div>
