--- a/seller/templates/basetemp.html
+++ b/seller/templates/basetemp.html
@@ -14,26 +14,26 @@
   <!-- Plugin css for this page -->
   <link rel="stylesheet" href="/static/seller/vendors/datatables.net-bs4/dataTables.bootstrap4.css">
   <link rel="stylesheet" href="/static/seller/vendors/ti-icons/css/themify-icons.css">
-  <link rel="stylesheet" type="text/css" href="/static/seller/js/select.dataTables.min.css">
+  {% comment %} <link rel="stylesheet" type="text/css" href="/static/seller/js/select.dataTables.min.css"> {% endcomment %}
   <!-- End plugin css for this page -->
   <!-- inject:css -->
   <link rel="stylesheet" href="/static/seller/css/vertical-layout-light/style.css">
   <!-- endinject -->
-  <link rel="shortcut icon" href="/static/seller/images/favicon.png" />
+  {% comment %} <link rel="shortcut icon" href="/static/seller/images/favicon.png" /> {% endcomment %}
 </head>
 <body>
   <div class="container-scroller">
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-        <a class="navbar-brand brand-logo mr-5" href="index.html"><img src="/static/seller/images/logo1.jpeg" class="mr-2" alt="logo"/></a>
-        <a class="navbar-brand brand-logo-mini" href="index.html"><img src="/static/seller/images/logo-mini.svg" alt="logo"/></a>
+        <a class="navbar-brand brand-logo mr-5" href="{% url 'home' %}"><img src="/static/main/images/logo1.png" class="mr-2" alt="logo"/></a>
+        {% comment %} <a class="navbar-brand brand-logo-mini" href="index.html"><img src="/static/seller/images/logo-mini.svg" alt="logo"/></a> {% endcomment %}
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
-        <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
+        {% comment %} <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
           <span class="icon-menu"></span>
-        </button>
-        <ul class="navbar-nav mr-lg-2">
+        </button> {% endcomment %}
+        {% comment %} <ul class="navbar-nav mr-lg-2">
           <li class="nav-item nav-search d-none d-lg-block">
             <div class="input-group">
               <div class="input-group-prepend hover-cursor" id="navbar-search-icon">
@@ -44,7 +44,7 @@
               <input type="text" class="form-control" id="navbar-search-input" placeholder="Search now" aria-label="search" aria-describedby="search">
             </div>
           </li>
-        </ul>
+        </ul> {% endcomment %}
         <ul class="navbar-nav navbar-nav-right">
           {% comment %} <li class="nav-item dropdown">
             <a class="nav-link count-indicator dropdown-toggle" id="notificationDropdown" href="#" data-toggle="dropdown">
@@ -99,11 +99,11 @@
               <img src="/static/seller/images/faces/face28.jpg" alt="profile"/>
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-              <a class="dropdown-item">
+              {% comment %} <a class="dropdown-item">
                 <i class="ti-settings text-primary"></i>
                 Settings
-              </a>
-              <a href =" " class="dropdown-item">
+              </a> {% endcomment %}
+              <a href ="{% url 'logoutUser' %} " class="dropdown-item">
                 <i class="ti-power-off text-primary"></i>
                 Logout
               </a>
@@ -398,12 +398,10 @@
         <!-- partial:partials/_footer.html -->
         <footer class="footer">
           <div class="d-sm-flex justify-content-center justify-content-sm-between">
-            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2021.  Premium <a href="https://www.bootstrapdash.com/" target="_blank">Bootstrap admin template</a> from BootstrapDash. All rights reserved.</span>
-            <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made with <i class="ti-heart text-danger ml-1"></i></span>
+            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2022 All rights reserved.</span>
+            
           </div>
-          <div class="d-sm-flex justify-content-center justify-content-sm-between">
-            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Distributed by <a href="https://www.themewagon.com/" target="_blank">Themewagon</a></span> 
-          </div>
+          
         </footer> 
         <!-- partial -->
       </div>
