--- a/static/seller/scss/common/light/_variables.scss
+++ b/static/seller/scss/common/light/_variables.scss
@@ -41,7 +41,7 @@ $colors: (
 
 
 $theme-colors: (
-  primary:         #4B49AC,
+  primary:         #119744,
   secondary:       #a3a4a5,
   success:         #57B657,
   info:            #248AFD,
