--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -57,14 +57,14 @@
                 {% endif %}
                 
                 {% if seller %}
-                <a href="{% url 'login' %}" class="header-widget" title="My Account">
+                <a href="{% url 'signin' %}" class="header-widget" title="My Account">
                     <img src="{% static 'main/images/user.png' %}" alt="user"><span>{{request.user.username}}</span></a>
                 <form class="header-form"><input type="text" placeholder="Search anything..."><button><i
                             class="fas fa-search"></i></button></form>
                 {% endif %}
 
                 {% if none %}
-                <a href="{% url 'login' %}" class="header-widget" title="My Account">
+                <a href="{% url 'signin' %}" class="header-widget" title="My Account">
                     <img src="{% static 'main/images/user.png' %}" alt="user"><span>Login</span></a>
                 <form class="header-form"><input type="text" placeholder="Search anything..."><button><i
                             class="fas fa-search"></i></button></form>
@@ -100,29 +100,228 @@
             </div>
         </div>
     </nav>
-    <aside class="category-sidebar">
-        <div class="category-header">
-            <h4 class="category-title"><i class="fas fa-align-left"></i><span>categories</span></h4><button
-                class="category-close"><i class="icofont-close"></i></button>
-        </div>
-        <ul class="category-list">
-            <li class="category-item"><a class="category-link dropdown-link" href="#"><i
-                        class="flaticon-vegetable"></i><span>Produce</span></a>
-                <ul class="dropdown-list">
-                    <li><a href="#">Mango</a></li>
-                    <li><a href="#">Coconut</a></li>
-                    <li><a href="#">Tomatoes</a></li>
-                    <li><a href="#">Onion</a></li>
-                    <li><a href="#">Pawpaw</a></li>
-                    <li><a href="#">Pepper</a></li>
-                </ul>
-            </li>
 
-        </ul>
-        <div class="category-footer">
-            <p>All Rights Reserved by <a href="#">Mironcoder</a></p>
-        </div>
-    </aside>
+    {% comment %} <aside class="category-sidebar"><div class="category-header">
+        <h4 class="category-title">
+            <i class="fas fa-align-left"></i>
+            <span>categories</span>
+        </h4>
+        <button class="category-close">
+            <i class="icofont-close"></i>
+        </button>
+    </div>
+    <ul class="category-list">
+        <li class="category-item">
+            <a class="category-link dropdown-link" href="#">
+                <i class="flaticon-vegetable">
+
+                </i>
+                <span>vegetables</span>
+            </a>
+            <ul class="dropdown-list">
+                <li>
+                    <a href="#">asparagus</a>
+                </li>
+                <li>
+                    <a href="#">broccoli</a>
+                </li>
+                <li>
+                    <a href="#">carrot</a>
+                </li>
+            </ul>
+        </li>
+        <li class="category-item">
+            <a class="category-link dropdown-link" href="#">
+                <i class="flaticon-groceries"></i>
+                <span>groceries</span>
+            </a>
+            <ul class="dropdown-list">
+                <li>
+                    <a href="#">Grains & Bread</a>
+                </li>
+                <li>
+                    <a href="#">Dairy & Eggs</a>
+                </li>
+                <li>
+                    <a href="#">Oil & Fat</a>
+                </li>
+            </ul>
+        </li>
+        <li class="category-item">
+            <a class="category-link dropdown-link" href="#">
+                <i class="flaticon-fruit"></i>
+                <span>fruits</span>
+            </a>
+            <ul class="dropdown-list">
+                <li>
+                    <a href="#">Apple</a>
+                </li>
+                <li>
+                    <a href="#">Orange</a>
+                </li>
+                <li>
+                    <a href="#">Strawberry</a>
+                </li>
+            </ul>
+        </li>
+        <li class="category-item">
+            <a class="category-link dropdown-link" href="#">
+                <i class="flaticon-dairy-products"></i>
+                <span>dairy farm</span>
+            </a>
+            <ul class="dropdown-list">
+                <li>
+                    <a href="#">Egg</a>
+                </li>
+                <li>
+                    <a href="#">milk</a>
+                </li>
+                <li>
+                    <a href="#">butter</a>
+                </li>
+            </ul>
+        </li>
+        <li class="category-item">
+            <a class="category-link dropdown-link" href="#">
+                <i class="flaticon-crab"></i>
+                <span>sea foods</span>
+            </a>
+            <ul class="dropdown-list">
+                <li>
+                    <a href="#">Lobster</a>
+                </li>
+                <li>
+                    <a href="#">Octopus</a>
+                </li>
+                <li>
+                    <a href="#">Shrimp</a>
+                </li>
+            </ul>
+        </li>
+        <li class="category-item">
+            <a class="category-link dropdown-link" href="#">
+                <i class="flaticon-salad"></i>
+                <span>diet foods</span>
+            </a>
+            <ul class="dropdown-list">
+                <li>
+                    <a href="#">Salmon</a>
+                </li>
+                <li>
+                    <a href="#">Potatoes</a>
+                </li>
+                <li>
+                    <a href="#">Greens</a>
+                </li>
+            </ul>
+        </li>
+        <li class="category-item">
+            <a class="category-link dropdown-link" href="#">
+                <i class="flaticon-dried-fruit"></i>
+                <span>dry foods</span>
+            </a>
+            <ul class="dropdown-list">
+                <li>
+                    <a href="#">noodles</a>
+                </li>
+                <li>
+                    <a href="#">Powdered milk</a>
+                </li>
+                <li>
+                    <a href="#">nut & yeast</a>
+                </li>
+            </ul>
+        </li>
+        <li class="category-item">
+            <a class="category-link dropdown-link" href="#">
+                <i class="flaticon-fast-food"></i>
+                <span>fast foods</span>
+            </a>
+            <ul class="dropdown-list">
+                <li>
+                    <a href="#">mango</a>
+                </li>
+                <li>
+                    <a href="#">plumsor</a>
+                </li>
+                <li>
+                    <a href="#">raisins</a>
+                </li>
+            </ul>
+        </li>
+        <li class="category-item">
+            <a class="category-link dropdown-link" href="#">
+                <i class="flaticon-cheers"></i>
+                <span>drinks</span>
+            </a>
+            <ul class="dropdown-list">
+                <li>
+                    <a href="#">Wine</a>
+                </li>
+                <li>
+                    <a href="#">Juice</a>
+                </li>
+                <li>
+                    <a href="#">Water</a>
+                </li>
+            </ul>
+        </li>
+        <li class="category-item">
+            <a class="category-link dropdown-link" href="#">
+                <i class="flaticon-beverage"></i>
+                <span>coffee</span>
+            </a>
+            <ul class="dropdown-list">
+                <li>
+                    <a href="#">Cappuchino</a>
+                </li>
+                <li>
+                    <a href="#">Espresso</a>
+                </li>
+                <li>
+                    <a href="#">Latte</a>
+                </li>
+            </ul>
+        </li>
+        <li class="category-item">
+            <a class="category-link dropdown-link" href="#">
+                <i class="flaticon-barbecue"></i>
+                <span>meats</span>
+            </a>
+            <ul class="dropdown-list">
+                <li>
+                    <a href="#">Meatball</a>
+                </li>
+                <li>
+                    <a href="#">Sausage</a>
+                </li>
+                <li>
+                    <a href="#">Poultry</a>
+                </li>
+            </ul>
+        </li>
+        <li class="category-item">
+            <a class="category-link dropdown-link" href="#">
+                <i class="flaticon-fish"></i>
+                <span>fishes</span>
+            </a>
+            <ul class="dropdown-list">
+                <li>
+                    <a href="#">Agujjim</a>
+                </li>
+                <li>
+                    <a href="#">saltfish</a>
+                </li>
+                <li>
+                    <a href="#">pazza</a>
+                </li>
+            </ul>
+        </li>
+    </ul>
+   
+    </aside> {% endcomment %}
+    
+    
     <aside class="cart-sidebar">
         <div class="cart-header">
             <div class="cart-total"><i class="fas fa-shopping-basket"></i><span>total item (5)</span></div><button
@@ -382,7 +581,9 @@
             </div>
         </div>
     </div>
-    <section class="banner-part">
+
+
+    {% comment %} <section class="banner-part">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3">
@@ -458,7 +659,160 @@
                 </div>
             </div>
         </div>
+    </section> {% endcomment %}
+
+
+    <section class="banner-part"><div class="container">
+        <div class="row"><div class="col-lg-3">
+            <div class="banner-category">
+                <div class="banner-category-head">
+                    <i class="fas fa-bars"></i>
+                    <span>top categories</span>
+                </div>
+                <ul class="banner-category-list">
+                    <li class="banner-category-item">
+                        <a href="#">
+                            <i class="flaticon-vegetable"></i>
+                            <span>vegetables</span>
+                        </a>
+                        <li class="banner-category-item">
+                            <a href="#">
+                                <i class="flaticon-groceries"></i>
+                                <span>groceries</span>
+                            </a>
+                        </li>
+                        <li class="banner-category-item">
+                            <a href="#">
+                                <i class="flaticon-fruit"></i>
+                                <span>fruits</span>
+                            </a>
+                            
+                        </li>
+                        <li class="banner-category-item">
+                            <a href="#">
+                                <i class="flaticon-dairy-products"></i>
+                                <span>dairy farms</span>
+                            </a>
+
+                            
+                        </li>
+                        <li class="banner-category-item">
+                            <a href="#">
+                                <i class="flaticon-crab"></i>
+                                <span>sea foods</span>
+                            </a>
+                            
+                        </li>
+                        
+                        <li class="banner-category-item">
+                            <a href="#">
+                                <i class="flaticon-cheers"></i>
+                                <span>drinks</span>
+                            </a>
+                        </li>
+                        <li class="banner-category-item">
+                            <a href="#">
+                                <i class="flaticon-barbecue"></i>
+                                <span>meats</span>
+                            </a>
+                        </li>
+                        <li class="banner-category-item">
+                            <a href="#">
+                                <i class="flaticon-vegetable"></i>
+                                <span>spicies</span>
+                            </a>
+                        </li>
+                        <li class="banner-category-item">
+                            <a href="#">
+                                <i class="flaticon-fish"></i>
+                                <span>fishes</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-9">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="home-grid-slider slider-dots">
+                            <div class="banner-wrap bg1">
+                                <div class="row align-items-center">
+                                    <div class="col-md-6 col-lg-6">
+                                        <div class="banner-content">
+                                            <h2>we are delivered organic foods item within 24 hours.</h2>
+                                            <a href="#" class="btn btn-inline">
+                                                <i class="fas fa-shopping-basket"></i>
+                                                <span>shop now</span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg-6">
+                                        <div class="banner-image">
+                                            <img src="/static/main/images/home/index/01.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="banner-wrap bg2">
+                                <div class="row align-items-center">
+                                    <div class="col-md-6 col-lg-6">
+                                        <div class="banner-content">
+                                            <h2>get your organic healthy foods item online today.</h2>
+                                            <a href="#" class="btn btn-inline">
+                                                <i class="fas fa-shopping-basket"></i>
+                                                <span>shop now</span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg-6">
+                                        <div class="banner-image">
+                                            <img src="/static/main/images/home/index/02.png" alt=""></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="banner-wrap bg3">
+                                    <div class="row align-items-center">
+                                        <div class="col-md-6 col-lg-6">
+                                            <div class="banner-content">
+                                                <h2>we are delivered organic foods item within 24 hours.</h2>
+                                                <a href="#" class="btn btn-inline">
+                                                    <i class="fas fa-shopping-basket"></i>
+                                                    <span>shop now</span>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-lg-6">
+                                            <div class="banner-image">
+                                                <img src="/static/main/images/home/index/03.png" alt="">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-6">
+                            <div class="banner-promo">
+                                <a href="#">
+                                    <img src="/static/main/images/promo/home/04.jpg" alt="promo">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-6">
+                            <div class="banner-promo">
+                                <a href="#">
+                                    <img src="/static/main/images/promo/home/05.jpg" alt="promo">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+
+
+
+
     <section class="section feature-part">
         <div class="container">
             <div class="row">
