minor tweek to register page

--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -51,7 +51,7 @@
                             </form>
                         </div>
                     </div>
-                    <div class="user-form-remind"><p>Already Have An Account?<a href="{% url 'login' %}">login here</a></p></div>
+                    <div class="user-form-remind"><p>Already Have An Account?<a href="{% url 'signin' %}">login here</a></p></div>
             <div class="user-form-footer"><p>MerFar | &COPY; Copyright by <a href="#">Gyan</a></p></div></div></div></div>
         </section>
 
