added the payment with paystack

--- a/main/templates/basetemplate.html
+++ b/main/templates/basetemplate.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
     <link rel="stylesheet" href="{% static 'main/fonts/fontawesome/fontawesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'main/css/home-standard.css' %}">
+    <link rel="stylesheet" href="{% static 'main/css/checkout.css'%}" />
 </head>
 
 <body>
