--- a/main/templates/market.html
+++ b/main/templates/market.html
@@ -145,17 +145,19 @@ style="background: url(/static/main/images/single-banner.jpg) no-repeat center">
                   <p>Unit Price - &#8373;{{a.item.price}}</p>
               </div>
               <div class="cart-action-group">
-                  <div class="product-action">
-                      <button class="action-minus" title="Quantity Minus">
-                          <i class="icofont-minus"></i>
-                      </button>
-                      <input class="action-input" title="Quantity Number" type="text" name="quantity" value="1">
-                          <button class="action-plus" title="Quantity Plus">
-                          <i class="icofont-plus"></i>
-                      </button>
-                  </div>
-                  <h6>&#8373;56.98</h6>
-              </div>
+                <div class="product-action">
+                    <button class="action-minus" title="Quantity Minus">
+                        <a href="{% url 'market' %}?minus={{a.id}}"><i class="icofont-minus"></i></a>
+                    </button>
+
+                    <input class="action-input" title="Quantity Number" type="text" name="quantity" value="{{a.quantity}}">
+
+                    <button class="action-plus" title="Quantity Plus">
+                        <a href="{% url 'market' %}?plus={{a.id}}"><i class="icofont-plus"></i></a>
+                    </button>
+                </div>
+                <h6>&#8373;{% if a.actual_price %}{{a.actual_price}} {% else %}{{a.item.price}} {% endif %}</h6>
+            </div>
           </div>
       </li>
       {% endfor %}
@@ -164,12 +166,14 @@ style="background: url(/static/main/images/single-banner.jpg) no-repeat center">
       
       
   </ul>
+  {% if tprice %}
   <div class="cart-footer">
       
-              <a class="cart-checkout-btn" href="checkout.html">
+              <a class="cart-checkout-btn" href="{% url 'checkoutpage' %}">
                   <span class="checkout-label">Proceed to Checkout</span>
                   <span class="checkout-price">&#8373;{{tprice}}</span></a>
   </div>
+  {% endif %}
 </aside>
 
 
