--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -15,12 +15,14 @@
                             <i class="flaticon-vegetable"></i>
                             <span>vegetables</span>
                         </a>
-                        <li class="banner-category-item">
+
+                       <!-- <li class="banner-category-item">
                             <a href="{% url 'market' %}?cat=grocery">
                                 <i class="flaticon-groceries"></i>
                                 <span>groceries</span>
                             </a>
-                        </li>
+                        </li> -->
+
                         <li class="banner-category-item">
                             <a href="{% url 'market' %}?cat=fruit">
                                 <i class="flaticon-fruit"></i>
@@ -28,40 +30,42 @@
                             </a>
                             
                         </li>
-                        <li class="banner-category-item">
+                        <!--<li class="banner-category-item">
                             <a href="{% url 'market' %}?cat=dairy">
                                 <i class="flaticon-dairy-products"></i>
                                 <span>dairy farms</span>
                             </a>
 
                             
-                        </li>
-                        <li class="banner-category-item">
+                        </li> -->
+
+                      <!--  <li class="banner-category-item">
                             <a href="{% url 'market' %}?cat=sea">
                                 <i class="flaticon-crab"></i>
                                 <span>sea foods</span>
                             </a>
                             
-                        </li>
+                        </li> --->
                         
-                        <li class="banner-category-item">
+                     <!--   <li class="banner-category-item">
                             <a href="{% url 'market' %}?cat=drink">
                                 <i class="flaticon-cheers"></i>
                                 <span>drinks</span>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="banner-category-item">
                             <a href="{% url 'market' %}?cat=meat">
                                 <i class="flaticon-barbecue"></i>
                                 <span>meats</span>
                             </a>
                         </li>
-                        <li class="banner-category-item">
+
+                        <!--<li class="banner-category-item">
                             <a href="{% url 'market' %}?cat=spices">
                                 <i class="flaticon-vegetable"></i>
                                 <span>spices</span>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="banner-category-item">
                             <a href="{% url 'market' %}?cat=fish">
                                 <i class="flaticon-fish"></i>
@@ -79,7 +83,7 @@
                                 <div class="row align-items-center">
                                     <div class="col-md-6 col-lg-6">
                                         <div class="banner-content">
-                                            <h2>we are delivered organic foods item within 24 hours.</h2>
+                                            <h2>Organic Farm Produce.</h2>
                                             <a href="{% url 'market' %}" class="btn btn-inline">
                                                 <i class="fas fa-shopping-basket"></i>
                                                 <span>shop now</span>
@@ -114,7 +118,7 @@
                                     <div class="row align-items-center">
                                         <div class="col-md-6 col-lg-6">
                                             <div class="banner-content">
-                                                <h2>we are delivered organic foods item within 24 hours.</h2>
+                                                <h2>Organic farm Produce.</h2>
                                                 <a href="{% url 'market' %}" class="btn btn-inline">
                                                     <i class="fas fa-shopping-basket"></i>
                                                     <span>shop now</span>
