--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -7,7 +7,7 @@
     <meta name="template" content="greeny">
     <meta name="title" content="greeny - Ecommerce Food Store HTML Template">
     <meta name="keywords" content="organic, food, shop, ecommerce, store, html, bootstrap, template, agriculture, vegetables, products, farm, grocery, natural, online">
-    <title>Greeny - Login</title>
+    <title>Merfar - Login</title>
     <link rel="icon" href="/static/main/images/favicon.png">
     <link rel="stylesheet" href="/static/main/fonts/flaticon/flaticon.css">
     <link rel="stylesheet" href="/static/main/fonts/icofont/icofont.min.css">
@@ -84,7 +84,7 @@
                                     <p>Don't have any account?<a href="{% url 'register' %}">register here</a></p>
                                 </div>
                                 <div class="user-form-footer">
-                                    <p>Greeny | &COPY; Copyright by 
+                                    <p>Merfar | &COPY; Copyright by 
                                         <a href="#">Gyan</a>
                                     </p>
                                 </div>
